# kusanagi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose-dev.yml  docker-compose.yml
phaseidentifiers/: TEA.toml  UwU.toml
src/: lib.rs  main.rs
src/discord_bot/: mod.rs  start_bot.rs
src/discord_bot/commands/: mod.rs  report_stats.rs
src/fflogs_api/: api.rs  mod.rs  types.rs
src/fflogs_api/classes/: mod.rs
src/fflogs_api/parses/: mod.rs
src/fflogs_api/rankings/: mod.rs
src/fflogs_api/report/: events.rs  fights.rs  mod.rs
src/fflogs_api/reports/: mod.rs
src/fflogs_api/zones/: mod.rs
src/fight_analysis/: analyse_fight.rs  mod.rs  phase_definition.rs
