[package]
name = "kusanagi"
version = "0.1.0"
authors = ["tailred <callum@twintailsare.moe>"]
edition = "2018"

[lib]
name = "kusanagi"
path = "src/lib.rs"

[[bin]]
name = "kusanagi-bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15.0"
log = "^0.4"
pretty_env_logger = "^0.4"
futures = "^0.3.5"
tokio = "^0.2.20"
hyper = "^0.13"
hyper-tls = "^0.4.1"
http = "^0.2.1"
chrono = "^0.4.11"
serenity = {git = "https://github.com/Lakelezz/serenity/", branch = "await", features = ["framework", "standard_framework"]}
serde = {version = "^1.0", features = ["derive"]}
serde_repr = "^0.1"
serde_json = "^1.0"
serde_urlencoded = "^0.6.1"
toml = "^0.5"
regex = "^1.3.7"
lazy_static = "^1.4.0"
clap = "^2.33.1"